fix(layout): corrige duplicação de conteúdo em todas as páginas

--- a/public/assets/css/games.css
+++ b/public/assets/css/games.css
@@ -17,5 +17,9 @@
 
 ::-webkit-scrollbar-thumb:hover {
   background: linear-gradient(180deg, #9333ea, #6b21a8);
+  cursor:grab;
   
+}
+::-webkit-scrollbar-thumb:active {
+  cursor: grabbing;
 }
