--- a/public/assets/css/games.css
+++ b/public/assets/css/games.css
@@ -1,25 +1,21 @@
-
 ::-webkit-scrollbar {
-  width: 5px;
-               
+  width: 4px;
+  
 }
 
 ::-webkit-scrollbar-track {
-  background: #111827;      
-  
+  background: #000000;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(180deg, #7e22ce, #4c1d95); 
-  border-radius: 10px; 
-  
+  background: linear-gradient(180deg, #2c2c2c, #3c3c3c);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(180deg, #9333ea, #6b21a8);
-  cursor:grab;
-  
+  background: linear-gradient(180deg, #2d2d2d, #1d1d1d);
+  cursor: grab;
 }
+
 ::-webkit-scrollbar-thumb:active {
   cursor: grabbing;
 }
